--- a/PetoiSerialSwift/Info.plist
+++ b/PetoiSerialSwift/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIRequiresPersistentWiFi</key>
+	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This application needs to connect the arduino devices via bluetooth</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
